[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asmith_assignment4_lib"
version = "0.0.1"
authors = [
  { name="Arthur Smith", email="asmit360@msudenver.edu" },
]
description = "CS3250 Assignment 4"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/arthursmith001/CS3250_Assignment4"
